# pgr-assets

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Justfile  README.md  mise.toml  pgr-assets.py  pgr-assets.spec  pgr_document_shasum.py  pyproject.toml  requirements.txt
audio/: acb.py  registry.py
cmd/: helpers.py  list.py  root.py  spines.py
commands/: extract.py  spines.py
converters/: unity_to_json.py
converters/binarytable/: reader.py  table.py  test_reader.py  test_table.py
converters/binarytable/assets/: areastage.csv  areastage.tab.bytes
extractors/: __init__.py  bundle.py  helpers.py  usm.py
extractors/spine/: extractor.py  hacks.py  models.py  quirks.py
notebooks/: extract_spines.ipynb
sources/: obbstarter.py  patchcdn.py  pcstarter.py  session.py  source.py  sourceset.py
src/pgr_assets/: __init__.py  asset_paths.py  cri.py  logging_setup.py  versions.py
src/pgr_assets/audio/: __init__.py  acb.py  registry.py
src/pgr_assets/commands/: bundles.py  extract.py  helpers.py  list.py  root.py  spines.py
src/pgr_assets/converters/: unity_to_json.py
src/pgr_assets/converters/binarytable/: __main__.py  exceptions.py  reader.py  table.py  test_table.py
src/pgr_assets/converters/binarytable/assets/: npcsearcher.old.bytes  npcsettletime.tab.bytes
src/pgr_assets/extractors/: __init__.py  bundle.py  helpers.py  usm.py
src/pgr_assets/extractors/spine/: __init__.py  extractor.py  models.py  quirks.py
src/pgr_assets/extractors/video_encoders/: __init__.py  base.py  hls.py  mp4.py
src/pgr_assets/sources/: __init__.py  _index.py  exceptions.py  obbstarter.py  patchcdn.py  pcstarter.py  session.py  source.py  sourceset.py  xbuildconfig.py
tests/: test_versions.py
tests/audio/: test_acb.py
tests/audio/fixtures/: mo_modelm.acb
tests/commands/: test_dispatch.py  test_list.py
tests/converters/binarytable/: test_reader.py  test_table.py
tests/converters/binarytable/fixtures/: npcanimatorlayerinfo.i32pool.tab.bytes  npcsearcher.bytes  npcsettletime.old.tab.bytes
tests/extractors/: test_helpers.py
tests/extractors/spine/: test_models.py  test_quirks.py
tests/sources/: test_index.py  test_obbstarter.py  test_patchcdn.py  test_sourceset.py  test_xbuildconfig.py
