[project]
name = "pgr-assets"
version = "3.0.1"
description = "Huaxu asset retriever for Punishing: Gray Raven"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lameenc>=1.8.1",
    "msgpack>=1.1.2",
    "pillow>=12.2.0",
    "pycricodecs @ git+https://github.com/BlackNovaTech/PyCriCodecs",
    "pycryptodome>=3.23.0",
    "python-ffmpeg>=2.0.12",
    "requests>=2.33.1",
    "tqdm>=4.67.1",
    "typed-argument-parser>=1.11.0",
    "unitypy>=1.25.0",
]

[project.scripts]
pgr-assets = "pgr_assets:main"

[dependency-groups]
dev = ["pyright"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
